<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.5.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>eu.daxiongmao</groupId>
	<artifactId>daxiongmao-backend</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>Daxiongmao :: backend</name>
	<description>Application's backend</description>

	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>
		<!-- # SPRING BOOT framework # -->
		<!-- Information about application's status -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<!-- To interact with Databases through Object-Relationship-Mapping (hibernate + JPA) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<!-- To add web features such as web-services -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<!-- Developer features -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- ##### Utilities ##### -->
		<!-- To reduce boiler-plate code -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- Commons utilities (open source) -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.9</version>
		</dependency>


		<!-- ##### Database ##### -->
		<!-- To generate DB schema and core data -->
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<!-- Runtime, use Oracle. Since this driver is not on the official repositories it has been included in the project -->
		<dependency>
			<groupId>oracle</groupId>
			<artifactId>ojdbc</artifactId>
			<version>8.3</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/drivers/ojdbc8.jar</systemPath>
		</dependency>
		<!-- Test database, use H2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.200</version>
			<scope>test</scope>
		</dependency>


		<!-- ##### Security ##### -->
		<!-- Bouncy castle is a group that focus on security enhancement of the JDK through new APIs and implementation of latest security algorithms -->
		<!-- See https://www.bouncycastle.org/latest_releases.html for latest releases and packages -->
		<!-- Bouncy castle CORE -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
			<version>1.64</version>
		</dependency>


		<!-- ##### Web dependencies ###### -->
		<!-- OpenAPI documentation: REST web-services documentation and tests (swagger) in JSON, YAML, HTML -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.2.32</version>
		</dependency>
		<!-- To use @JsonFormat and return information in human form to services' consumers -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<!-- ##### Testing ##### -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>junit-vintage-engine</artifactId>
					<groupId>org.junit.vintage</groupId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Compilation settings -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${java.version}</release>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<!-- To execute UNIT tests [mocks and simple, quick tests] -->
			<!-- By default, the Surefire Plugin will automatically include all test classes with the following wildcard patterns:
				**/Test*.java - includes all of its subdirectories and all Java filenames that start with "Test"
				**/*Test.java - includes all of its subdirectories and all Java filenames that end with "Test"
				**/*Tests.java - includes all of its subdirectories and all Java filenames that end with "Tests"
				**/*TestCase.java - includes all of its subdirectories and all Java filenames that end with "TestCase"
				 Integration tests patterns have been manual excluded as safety
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
					<excludes>
						<exclude>**/*TestAPI</exclude>
						<exclude>**/*IntegrationTest</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- To execute INTEGRATON tests [tests that should run against real datasource, long tests] -->
			<!-- By default, the Failsafe Plugin will automatically include all test classes with the following wildcard patterns:
    				**/IT*.java - includes all of its subdirectories and all Java filenames that start with "IT".
    				**/*IT.java - includes all of its subdirectories and all Java filenames that end with "IT".
    				**/*ITCase.java - includes all of its subdirectories and all Java filenames that end with "ITCase".
				If the test classes do not follow any of these naming conventions, then configure Failsafe Plugin and specify the tests you want to include.
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
					<includes>
						<include>**/*TestAPI</include>
						<include>**/*IntegrationTest</include>
					</includes>
				</configuration>
			</plugin>

			<!-- Generate source artifact to upload along the binaries, this help debug mode -->
			<!-- This is mandatory for publication on Maven Central -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Generate javadoc to ease API browsing -->
			<!-- This is mandatory for publication on Maven Central -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<sourcepath>src/main/java</sourcepath>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!--  To generate test coverage reports (for Codacy & Sonarqube) -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
